<resources>
    <string name="app_name">Colors</string>
    <string name="lbl_red">Red</string>
    <string name="lbl_green">Green</string>
    <string name="lbl_blue">Blue</string>
    <string name="lbl_alpha">Alpha</string>
    <!--Options Menu labels/options -->
    <string name="lblOpTransparent">Transparent</string>
    <string name="lblOpSemitransparent">Semitransparent</string>
    <string name="lblOpOpaque">Opaque</string>
    <string name="lblOpBlack">Black</string>
    <string name="lblOpWhite">White</string>
    <string name="lblOpRed">Red</string>
    <string name="lblOpGreen">Green</string>
    <string name="lblOpBlue">Blue</string>
    <string name="lblOpCyan">Cyan</string>
    <string name="lblOpMagenta">Magenta</string>
    <string name="lblOpYellow">Yellow</string>
    <string name="lblOpReset">Reset</string>
    <string name="lblOpAboutof">About of</string>
    <string name="lblHelp">Help</string>
    <string name="lblColors">Colors</string>
    <string name="lblClose">Close app</string>

    <!--AboutOf labels -->

    <string name="lblCreator">Creator: </string>
    <string name="lblUniversity">University: </string>
    <string name="lblContact">Contact: </string>
    <string name="lblTitle">Tutorial </string>


    <string name="Text1">You can change the color using the seekbars,
try until you find the color you like the best </string>
    <string name="Text2">Also remember that you can change the transparency with the seekbar Alpha </string>
    <string name="Text3">Good luck </string>

    <string name="ColorSelected"></string>
</resources>
